initial homepage skeleton

--- a/index.html
+++ b/index.html
@@ -8,17 +8,37 @@
     <title>Kwizzical - the koolest kwiz site on the web</title>
   </head>
   <body>
-    <h1>Kwizzicle</h1>
-    <p>Welcome to Kwizzy'cal</p>
+      <nav>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Our Mission</a></li>
+          <li><a href="#">Like and Subscrube</a></li>
+          <li><a href="#">Sign up</a></li>
+          <li><a href="#">Log in</a></li>
+          <li><input id="searchbar" type="search" /></li>
+        </ul>
+      </nav>
+
+    <h1>Welcome to Q'wizi coll - the best website on the Internets</h1>
+    <img src="img/wg-logo.jpg" />
+    <p>Welcome to Kwizzy.cal</p>
     <p>Feel free to take a look around at all the
       <em>amazing</em> <strong>features</strong> we have!
     </p>
-    <p>O noes! Deres nufin 2 clik on?
-      Hearz a picher of kewt kiten insted:
-    </p>
-    <h2>miaow miaow cat</h2>
-    <a href="http://www.cs.bris.ac.uk/Mugshots/ian.gif">
-      <img src="img/placeholderkitten.jpg" alt="O Noes! Deres no kiten! Wear he gon?"/>
-    </a>
+
+    <div id="buttondiv">
+      <button>Take A Quiz!</button>
+      <button>Make Ur Own Quiz</button>
+    </div>
+
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">Sitemap</a></li>
+          <li><a href="#">Legal</a></li>
+          <li><a href="#">Careers</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
