--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
   <body>
       <nav>
         <ul>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="#">Our Mission</a></li>
           <li><a href="#">Like and Subscrube</a></li>
           <li><a href="#">Sign up</a></li>
           <li><a href="#">Log in</a></li>
-          <li><input id="searchbar" type="search" /></li>
+          <li><input id="searchbar" title="search box" type="search" /></li>
         </ul>
       </nav>
 
     <h1>Welcome to Q'wizi coll - the best website on the Internets</h1>
-    <img src="img/wg-logo.jpg" />
+    <img src="img/wg-logo.jpg" alt="Web Gangsters logo"/>
     <p>Welcome to Kwizzy.cal</p>
     <p>Feel free to take a look around at all the
       <em>amazing</em> <strong>features</strong> we have!
@@ -36,7 +37,7 @@
         <ul>
           <li><a href="#">Sitemap</a></li>
           <li><a href="#">Legal</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a href="careers.html">Careers</a></li>
         </ul>
       </nav>
     </footer>
