simple javascript test

--- a/careers.html
+++ b/careers.html
@@ -6,6 +6,7 @@
     rel="stylesheet" type="text/css" />
     <meta charset="UTF-8"/>
     <title>Kwizzical - Careers</title>
+    <script src="test.js"></script>
   </head>
   <body>
     <nav>
@@ -19,12 +20,12 @@
         <li><input id="searchbar" title="search box" type="search" /></li>
       </ul>
     </nav>
-    <h1>Careers</h1>
+    <h1 id="paragraph">Careers</h1>
     <p>
       Why not do a carrer with qwuiZZical? We have the best jobs in the world. Apply today!
     </p>
     <div id = "buttondiv">
-      <button>Apply</button>
+      <button id="applybutton">Apply</button>
     </div>
     <footer>
       <nav>
