Draft button Grid

--- a/takequiz.html
+++ b/takequiz.html
@@ -21,20 +21,47 @@
       </ul>
     </nav>
     <h1>Take a Quiz</h1>
-    <ul class="grid">
-      <li class="gridelement">History</li>
-      <li class="gridelement">Arts</li>
-      <li class="gridelement">Computer Science</li>
-      <li class="gridelement">Entertainment</li>
-      <li class="gridelement">Cats</li>
-      <li class="gridelement">General Knowledge</li>
-      <li class="gridelement">Colonel Trivia</li>
-      <li class="gridelement">Animals</li>
-      <li class="gridelement">History</li>
-      <li class="gridelement">History</li>
-      <li class="gridelement">History</li>
-      <li class="gridelement">History</li>
-    </ul>
+    <div id=buttonGrid>
+        <button type="gridButton" class="gridButton">
+        <a href="301.html">History</a>
+        </button> 
+        <button type="gridButton" class="gridButton">
+        <a href="305.html">Arts</a>
+        </button>
+        <button type="gridButton" class="gridButton">
+        <a href="308.html">Computer Science</a>
+        </button>
+        <br>
+
+        <button type="gridButton" class="gridButton">
+        <a href="303.html">Entertainment</a>
+        </button> 
+        <button type="gridButton" class="gridButton">
+        <a href="306.html">Cats</a>
+        </button> 
+        <button type="gridButton" class="gridButton">
+        <a href="309.html">General Knowledge</a>
+        </button> 
+        <br>
+
+        <button type="gridButton" class="gridButton">
+        <a href="304.html">Colonel Trivia</a>
+        </button>
+        <button type="gridButton" class="gridButton">
+        <a href="307.html">Animals</a>
+        </button>
+        <button type="gridButton" class="gridButton">
+        <a href="310.html">History</a>
+        </button> 
+        <br>
+
+        <button type="gridButton" class="gridButton">
+        <a href="311.html">History</a>
+        </button> 
+        <button type="gridButton" class="gridButton">
+        <a href="312.html">History</a>
+        </button>
+        </div>
     <footer>
       <nav>
         <ul>
