Sticky footer fix

--- a/takequiz.html
+++ b/takequiz.html
@@ -9,6 +9,7 @@
     <script src="test.js"></script>
   </head>
   <body>
+  <header>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -20,7 +21,9 @@
         <li><input id="searchbar" title="search box" type="search" /></li>
       </ul>
     </nav>
+    </header>
     <h1>Take a Quiz</h1>
+    <main class="Site-content">
     <div id=buttonGrid>
         <button type="gridButton" class="gridButton">
         <a href="301.html">History</a>
@@ -62,6 +65,7 @@
         <a href="312.html">History</a>
         </button>
         </div>
+        </main>
     <footer>
       <nav>
         <ul>
