error fixing (br, html tags)

--- a/choosecategory.html
+++ b/choosecategory.html
@@ -28,7 +28,7 @@
     </header>
     <h1>Take a Quiz</h1>
     <main class="Site-content">
-    <div id=buttonGrid>
+    <div id="buttonGrid">
         <button type="gridButton" class="gridButton">
         <a href="301.html">History</a>
         </button>
@@ -38,7 +38,7 @@
         <button type="gridButton" class="gridButton">
         <a href="308.html">Computer Science</a>
         </button>
-        <br>
+        <br />
 
         <button type="gridButton" class="gridButton">
         <a href="303.html">Entertainment</a>
@@ -49,7 +49,6 @@
         <button type="gridButton" class="gridButton">
         <a href="309.html">General Knowledge</a>
         </button>
-        <br>
 
         <button type="gridButton" class="gridButton">
         <a href="304.html">Colonel Trivia</a>
@@ -60,7 +59,7 @@
         <button type="gridButton" class="gridButton">
         <a href="310.html">History</a>
         </button>
-        <br>
+
 
         <button type="gridButton" class="gridButton">
         <a href="311.html">History</a>
@@ -80,3 +79,4 @@
       </nav>
     </footer>
   </body>
+</html>
