--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </p>
 
     <div id="buttondiv">
-      <button>Take A Quiz!</button>
-      <button>Make Ur Own Quiz</button>
+      <a href="choosecategory.html"><button>Take A Quiz!</button></a>
+      <a href="#"><button>Make Ur Own Quiz</button></a>
     </div>
 
     <footer>
