--- a/takequiz.html
+++ b/takequiz.html
@@ -24,28 +24,26 @@
     </header>
     <h1>Take a Quiz</h1>
     <main class="Site-content">
-    <div id=buttonGrid>
+    <div id="buttonGrid">
         <button type="gridButton" class="gridButton">
         <a href="301.html">History</a>
-        </button> 
+        </button>
         <button type="gridButton" class="gridButton">
         <a href="305.html">Arts</a>
         </button>
         <button type="gridButton" class="gridButton">
         <a href="308.html">Computer Science</a>
         </button>
-        <br>
 
         <button type="gridButton" class="gridButton">
         <a href="303.html">Entertainment</a>
-        </button> 
+        </button>
         <button type="gridButton" class="gridButton">
         <a href="306.html">Cats</a>
-        </button> 
+        </button>
         <button type="gridButton" class="gridButton">
         <a href="309.html">General Knowledge</a>
-        </button> 
-        <br>
+        </button>
 
         <button type="gridButton" class="gridButton">
         <a href="304.html">Colonel Trivia</a>
@@ -55,12 +53,11 @@
         </button>
         <button type="gridButton" class="gridButton">
         <a href="310.html">History</a>
-        </button> 
-        <br>
+        </button>
 
         <button type="gridButton" class="gridButton">
         <a href="311.html">History</a>
-        </button> 
+        </button>
         <button type="gridButton" class="gridButton">
         <a href="312.html">History</a>
         </button>
@@ -76,3 +73,4 @@
       </nav>
     </footer>
   </body>
+</html>
