all pages validated (Chrome, Firefox)

--- a/choosecategory.html
+++ b/choosecategory.html
@@ -11,62 +11,34 @@
   <body>
   <header>
     <nav>
-      <ul>
-        <span id="leftside">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Our Mission</a></li>
-          <li><a href="#">Like and Subscrube</a></li>
-        </span>
-        <span id="rightside">
-          <li><a href="#">Sign up</a></li>
-          <li><a href="#">Log in</a></li>
-          <li><input id="searchbar" title="search box" type="search" /></li>
-        </span>
+      <ul id="leftside">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Our Mission</a></li>
+        <li><a href="#">Like and Subscrube</a></li>
+      </ul>
+
+      <ul id="rightside">
+        <li><a href="#">Sign up</a></li>
+        <li><a href="#">Log in</a></li>
+        <li><input id="searchbar" title="search box" type="search" /></li>
       </ul>
     </nav>
     </header>
     <h1>Take a Quiz</h1>
     <main class="Site-content">
     <div id="buttonGrid">
-        <button type="gridButton" class="gridButton">
-        <a href="301.html">History</a>
-        </button>
-        <button type="gridButton" class="gridButton">
-        <a href="305.html">Arts</a>
-        </button>
-        <button type="gridButton" class="gridButton">
-        <a href="308.html">Computer Science</a>
-        </button>
-        <br />
-
-        <button type="gridButton" class="gridButton">
-        <a href="303.html">Entertainment</a>
-        </button>
-        <button type="gridButton" class="gridButton">
-        <a href="306.html">Cats</a>
-        </button>
-        <button type="gridButton" class="gridButton">
-        <a href="309.html">General Knowledge</a>
-        </button>
-
-        <button type="gridButton" class="gridButton">
-        <a href="304.html">Colonel Trivia</a>
-        </button>
-        <button type="gridButton" class="gridButton">
-        <a href="307.html">Animals</a>
-        </button>
-        <button type="gridButton" class="gridButton">
-        <a href="310.html">History</a>
-        </button>
-
-
-        <button type="gridButton" class="gridButton">
-        <a href="311.html">History</a>
-        </button>
-        <button type="gridButton" class="gridButton">
-        <a href="312.html">History</a>
-        </button>
+        <button class="gridButton">History</button>
+        <button class="gridButton">Arts</button>
+        <button class="gridButton">Computer Science</button>
+        <button class="gridButton">Entertainment</button>
+        <button class="gridButton">Cats</button>
+        <button class="gridButton">General Knowledge</button>
+        <button class="gridButton">Colonel Trivia</button>
+        <button class="gridButton">Animals</button>
+        <button class="gridButton">Whatevs</button>
+        <button class="gridButton">Cool Stuff</button>
+        <button class="gridButton">Cthulu</button>
         </div>
         </main>
     <footer>
