--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </p>
 
     <div id="buttondiv">
-      <a href="choosecategory.html"><button>Take A Quiz!</button></a>
-      <a href="#"><button>Make Ur Own Quiz</button></a>
+      <a href="choosecategory.html">Take A Quiz!</a>
+      <a href="#">Make Ur Own Quiz</a>
     </div>
 
     <footer>
