--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
     <title>Kwizzical - the koolest kwiz site on the web</title>
   </head>
   <body>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Our Mission</a></li>
-          <li><a href="#">Like and Subscrube</a></li>
-          <li><a href="#">Sign up</a></li>
-          <li><a href="#">Log in</a></li>
-          <li><input id="searchbar" title="search box" type="search" /></li>
-        </ul>
-      </nav>
+    <nav>
+      <ul id="leftside">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Our Mission</a></li>
+        <li><a href="#">Like and Subscrube</a></li>
+      </ul>
+
+      <ul id="rightside">
+        <li><a href="#">Sign up</a></li>
+        <li><a href="#">Log in</a></li>
+        <li><input id="searchbar" title="search box" type="search" /></li>
+      </ul>
+    </nav>
 
     <h1>Welcome to Q'wizi coll - the best website on the Internets</h1>
     <img src="img/wg-logo.jpg" alt="Web Gangsters logo"/>
