--- a/takequiz.html
+++ b/takequiz.html
@@ -11,11 +11,14 @@
   <body>
   <header>
     <nav>
-      <ul>
+      <ul id="leftside">
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Our Mission</a></li>
         <li><a href="#">Like and Subscrube</a></li>
+      </ul>
+
+      <ul id="rightside">
         <li><a href="#">Sign up</a></li>
         <li><a href="#">Log in</a></li>
         <li><input id="searchbar" title="search box" type="search" /></li>
