--- a/index.html
+++ b/index.html
@@ -1,48 +1,88 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
   lang="en-GB" xml:lang="en-GB">
-  <head>
-    <link href="style.css"
-    rel="stylesheet" type="text/css" />
-    <meta charset="UTF-8"/>
-    <title>Kwizzical - the koolest kwiz site on the web</title>
-  </head>
-  <body>
-    <nav>
-      <ul id="leftside">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Our Mission</a></li>
-        <li><a href="#">Like and Subscrube</a></li>
-      </ul>
-
-      <ul id="rightside">
-        <li><a href="#">Sign up</a></li>
-        <li><a href="#">Log in</a></li>
-        <li><input id="searchbar" title="search box" type="search" /></li>
-      </ul>
-    </nav>
-
-    <h1>Welcome to Q'wizi coll - the best website on the Internets</h1>
-    <img src="img/wg-logo.jpg" alt="Web Gangsters logo"/>
-    <p>Welcome to Kwizzy.cal</p>
-    <p>Feel free to take a look around at all the
-      <em>amazing</em> <strong>features</strong> we have!
-    </p>
-
-    <div id="buttondiv">
-      <a href="choosecategory.html">Take A Quiz!</a>
-      <a href="#">Make Ur Own Quiz</a>
-    </div>
-
-    <footer>
-      <nav>
-        <ul>
-          <li><a href="#">Sitemap</a></li>
-          <li><a href="#">Legal</a></li>
-          <li><a href="careers.html">Careers</a></li>
-        </ul>
-      </nav>
-    </footer>
-  </body>
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="keywords" content="Quiz Quizzes Kwizical WebTech Coursework"/>
+        <meta name="description" content="Kwizical, a site where you can make a take quizzes"/>
+        <meta name="author" content="Geroge Graver, Olly King"/>
+        <title>
+            Kwizical
+        </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/journal/bootstrap.min.css"/>
+        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
+    </head>
+    <body>
+        <nav class="navbar navbar-default navbar-static-top">
+            <div class="container navbar-inner">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                    <a class="navbar-brand" href="index.html" target="_blank"><img class="img-responsive" src="img/kwizical_logo.png" alt="Kwizical Logo"/></a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>
+                                    <a href="about.html">About Us</a>
+                                </li>
+                                <li>
+                                    <a href="like.html">Like and Subscrube</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="signup.html">Sign Up</a>
+                        </li>
+                        <li>
+                            <a href="login.html">Login</a>
+                        </li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </nav>
+        <div class="container">
+            <h1 class="text-center front_page_title">
+                Welcome to Q'wizi coll - the best website on the Internets
+            </h1>
+        </div>
+        <div class="container">
+            <a href="about.html"><img id="group_pic" class="img-responsive img-rounded center-block" src="img/wg-logo.jpg" alt="Web Gangsters logo"/></a>
+        </div>
+        <div class="container">
+            <div class="row">
+             
+                <div class="col-xs-6 text-right">
+                    <a href="#" class="btn btn-primary" id="tp_left_button">Take A Quiz!</a>
+                </div>
+                <div class="col-xs-6 text-left">
+                    <a href="#" class="btn btn-success " id="tp_right_button">Make A Quiz</a>
+                </div>
+    
+            </div>  
+        </div>
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-4">
+                    </div>
+                    <div class="col-xs-4">
+                    </div>
+                    <div class="col-xs-4"> <span>© 2016 Kwizical</span>
+                    </div>
+                </div>    
+            </div>
+        </footer><!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
+</script> <!-- Latest compiled and minified JavaScript -->
+         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
+</script>
+    </body>
 </html>
