--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -2,7 +2,11 @@
   <!-- better to use n-bind than {{ }}
   http://stackoverflow.com/questions/16125872/angularjs-why-ng-bind-is-better-than-in-angular -->
   <h1 data-ng-bind="quizname"></h1>
-  <p>Question <span data-ng-bind="qnum"></span>: <span data-ng-bind="question"></span></p>
+  <p>
+    Question <span data-ng-bind="qnum"></span>
+    of <span data-ng-bind="quizlength"></span>
+    :<span data-ng-bind="question"></span>
+  </p>
   <ul>
     <li data-ng-repeat="c in choices">
       <a href="" data-ng-bind="c.choice" data-ng-click="next(c, $index)"></a>
