--- a/takequiz.html
+++ b/takequiz.html
@@ -1,41 +1,29 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
   lang="en-GB" xml:lang="en-GB">
+
   <head>
-    <link href="style.css"
-    rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/journal/bootstrap.min.css"/>
+      <link href="style.css" rel="stylesheet" type="text/css" />
+      <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
     <meta charset="UTF-8"/>
     <title>Kwizzical - Take a Quiz</title>
-    <script src="test.js"></script>
-  </head>
-  <body>
-  <header>
-    <nav>
-      <ul id="leftside">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Our Mission</a></li>
-        <li><a href="#">Like and Subscrube</a></li>
-      </ul>
 
-      <ul id="rightside">
-        <li><a href="#">Sign up</a></li>
-        <li><a href="#">Log in</a></li>
-        <li><input id="searchbar" title="search box" type="search" /></li>
-      </ul>
-    </nav>
-    </header>
-    <h1>Take a Quiz</h1>
-    <main class="Site-content">
-    </main>
-    <footer>
-      <nav>
-        <ul>
-          <li><a href="#">Sitemap</a></li>
-          <li><a href="#">Legal</a></li>
-          <li><a href="careers.html">Careers</a></li>
-        </ul>
-      </nav>
-    </footer>
+    <!--load angular - better to do this in the head -
+    calls to angular.module can only be compiled after the library has been loaded-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  </head>
+
+  <!--app is contained within body - no routing, keeping it simple for now-->
+  <body data-ng-app="quizApp">
+    <span header="header"></span>
+    <div class="container" data-quiz="quiz"></div>
+    <span footer="footer"></span>
   </body>
+
+  <!--load quiz script-->
+  <script src="js/quiz.js"></script>
 </html>
