--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-  lang="en-GB" xml:lang="en-GB">
+  lang="en-GB" xml:lang="en-GB"
+  data-ng-app="pageApp">
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/journal/bootstrap.min.css"/>
       <link href="style.css" rel="stylesheet" type="text/css" />
-      <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
+      <!--<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>-->
     <meta charset="UTF-8"/>
     <title>Kwizzical - Take a Quiz</title>
 
@@ -17,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </head>
-  <body data-ng-app="pageApp">
+  <body>
     <span header="header"></span>
         <div class="container">
             <h1 class="text-center front_page_title">
@@ -29,15 +30,15 @@
         </div>
         <div class="container">
             <div class="row">
-             
+
                 <div class="col-xs-6 text-right">
                     <a href="takequiz.html" class="btn btn-primary" id="tp_left_button">Take A Quiz!</a>
                 </div>
                 <div class="col-xs-6 text-left">
                     <a href="#" class="btn btn-success" id="tp_right_button">Make A Quiz</a>
                 </div>
-    
-            </div>  
+
+            </div>
         </div>
        <span footer="footer"></span>
   </body>
@@ -45,4 +46,3 @@
   <!--load page script-->
   <script src="js/page.js"></script>
 </html>
-
