--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/journal/bootstrap.min.css"/>
       <link href="style.css" rel="stylesheet" type="text/css" />
-      <!--<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>-->
+      <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
     <meta charset="UTF-8"/>
     <title>Kwizzical - Take a Quiz</title>
 
@@ -19,14 +19,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <span header="header"></span>
+    <span data-header="header"></span>
         <div class="container">
             <h1 class="text-center front_page_title">
                 Welcome to Q'wizi coll - the best website on the Internets
             </h1>
         </div>
         <div class="container">
-            <a href="about.html"><img id="group_pic" class="img-responsive img-rounded center-block" src="img/wg-logo.jpg" alt="Web Gangsters logo"/></a>
+            <a href="#"><img id="group_pic" class="img-responsive img-rounded center-block" src="img/wg-logo.jpg" alt="Web Gangsters logo"/></a>
         </div>
         <div class="container">
             <div class="row">
@@ -40,9 +40,9 @@
 
             </div>
         </div>
-       <span footer="footer"></span>
+       <span data-footer="footer"></span>
+       <!--load page script-->
+       <script src="js/page.js"></script>
   </body>
 
-  <!--load page script-->
-  <script src="js/page.js"></script>
 </html>
