--- a/pages/header.html
+++ b/pages/header.html
@@ -13,18 +13,18 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">About<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li>
-                                    <a href="#about">About Us</a>
+                                    <a href="#">About Us</a>
                                 </li>
                                 <li>
-                                    <a href="like.html">Like and Subscrube</a>
+                                    <a href="#">Like and Subscrube</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#contact">Contact</a>
+                            <a href="#">Contact</a>
                         </li>
                         <li>
-                            <a href="login.html">Login</a>
+                            <a href="#">Login</a>
                         </li>
                     </ul>
                 </div><!--/.nav-collapse -->
