General Housekeeping (and his faithful sidekick Colonel Tidyup)

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,10 @@
   <h1 class="text-center front_page_title">Welcome to Q'wizi coll - the best website on the Internets</h1>
 </div>
 <div class="container">
-  <img id="group_pic" class="img-responsive img-rounded center-block" src="img/wg-logo.jpg" alt="Web Gangsters logo"/>
+  <img id="group_pic"
+  class="img-responsive img-rounded center-block" 
+  src="img/wg-logo.jpg" 
+  alt="Web Gangsters logo"/>
 </div>
 <div class="container">
   <div class="row">
