--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,13 +1,11 @@
- <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-4">
-                    </div>
-                    <div class="col-xs-4">
-                    </div>
-                    <div class="col-xs-4"> <span>© 2016 Kwizical</span>
-                    </div>
-                </div>    
-            </div>
-        </footer>
-        
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-4"></div>
+      <div class="col-xs-4"></div>
+      <div class="col-xs-4">
+        <span>© 2016 Kwizical</span>
+      </div>
+    </div>
+  </div>
+</footer>
