--- a/logo_experiments.html
+++ b/logo_experiments.html
@@ -11,10 +11,9 @@ lang="en-GB" xml:lang="en-GB">
 
 <body>
 
-	<button onclick="rerun();">Again!</button>
-
+	
 	<div id="myobj">
-		<svg width="100%" height="100%" id="foo"
+		<svg width="200px" height="0px" id="foo"
 		version="1.1"
 		xmlns="http://www.w3.org/2000/svg"
 		xmlns:xlink="http://www.w3.org/1999/xlink"> 
@@ -24,7 +23,7 @@ lang="en-GB" xml:lang="en-GB">
 
 
 <script src="js/insertsvg.js"></script>
-<script src="js/logo.js"></script>
+<script src="js/logo2.js"></script>
 
 </body>
 </html>
