SVG in right place but doesn't animate

--- a/pages/header.html
+++ b/pages/header.html
@@ -2,7 +2,7 @@
   <div class="container navbar-inner">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-        <img class="img-responsive" src="img/kwizical_logo.png" alt="Kwizical Logo"/>
+        <div ng-include="'img/thinlogopath3.svg'"></div>
       </a>
       <button type="button"
       class="navbar-toggle collapsed"
@@ -34,3 +34,4 @@
     </div><!--/.nav-collapse -->
   </div>
 </nav>
+
