--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
     <title>Kwizzical - Home</title>
-
     <!--load angular - better to do this in the head -
     calls to angular.module can only be compiled after the library has been loaded-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.js"></script>
@@ -23,7 +22,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!--load page script-->
+    <script src="js/logo2.js"></script>
     <script src="js/kwizecal.js"></script>
+
   </body>
 
 </html>
