--- a/pages/header.html
+++ b/pages/header.html
@@ -2,7 +2,9 @@
   <div class="container navbar-inner">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
+      <div ng-controller="MyCtrl">
         <div ng-include="'img/thinlogopath3.svg'"></div>
+        </div>
       </a>
       <button type="button"
       class="navbar-toggle collapsed"
