--- a/pages/header.html
+++ b/pages/header.html
@@ -22,7 +22,7 @@
       <ul class="nav navbar-nav">
         <li><a href="#">Home</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
             About<span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
@@ -36,4 +36,3 @@
     </div><!--/.nav-collapse -->
   </div>
 </nav>
-
