--- a/pages/header.html
+++ b/pages/header.html
@@ -2,7 +2,7 @@
   <div class="container navbar-inner">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-      <div ng-controller="MyCtrl">
+      <div ng-controller="animationController">
         <div ng-include="'img/thinlogopath3.svg'"></div>
         </div>
       </a>
