added scaled image, added to home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,10 +2,11 @@
   <h1 class="text-center front_page_title">Welcome to Q'wizi coll - the best website on the Internets</h1>
 </div>
 <div class="container">
+  <!--alt tag optimised for SEO-->
   <img id="group_pic"
-  class="img-responsive img-rounded center-block" 
-  src="img/wg-logo.jpg" 
-  alt="Web Gangsters logo"/>
+  class="img-responsive img-rounded center-block"
+  src="img/KwizicOwl/KwizicOwl3_resized.png"
+  alt="KwizicOwl, The Quizzical Owl"/>
 </div>
 <div class="container">
   <div class="row">
