renamed controllers e.g. mainController -> mainCtrl

--- a/pages/takequiz.html
+++ b/pages/takequiz.html
@@ -1,4 +1,4 @@
-<div data-ng-controller="quizController" class="container" id="quiz">
+<div data-ng-controller="quizCtrl" class="container" id="quiz">
   <!-- better to use n-bind than {{ }}
   http://stackoverflow.com/questions/16125872/angularjs-why-ng-bind-is-better-than-in-angular -->
   <h1 data-ng-bind="quizname"></h1>
