restructure of quizCtrl

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" data-ng-controller="mainCtrl">
   <h1 class="text-center front_page_title">Welcome to Q'wizi coll - the best website on the Internets</h1>
 </div>
 <div class="container">
@@ -14,7 +14,7 @@
       <a href="#takequiz" class="btn btn-primary" id="tp_left_button">Take A Quiz!</a>
     </div>
     <div class="col-xs-6 text-left">
-      <a href="#makequiz" class="btn btn-success" id="tp_right_button">Make A Quiz</a>
+      <a href="" class="btn btn-success" id="tp_right_button">Make A Quiz</a>
     </div>
   </div>
 </div>
