--- a/pages/takequiz.html
+++ b/pages/takequiz.html
@@ -1,20 +1,20 @@
-<div data-ng-controller="quizCtrl" class="container" id="quiz">
+<div data-ng-controller="quizCtrl" class="container">
   <!-- better to use n-bind than {{ }}
   http://stackoverflow.com/questions/16125872/angularjs-why-ng-bind-is-better-than-in-angular -->
-  <h1 data-ng-bind="quizname"></h1>
+  <h1 data-ng-bind="quiz.title"></h1>
   <p>
-    Question <span data-ng-bind="qnum"></span>
-    of <span data-ng-bind="quizlength"></span>
-    :<span data-ng-bind="question"></span>
+    Question <span data-ng-bind="i+1"></span>
+    of <span data-ng-bind="quiz.questions.length"></span>
+    :<span data-ng-bind="quiz.questions[i].question"></span>
   </p>
   <ul>
-    <li data-ng-repeat="c in choices">
-      <a href="" data-ng-bind="c.choice" data-ng-click="checkAnswer(c.choice)"></a>
+    <li data-ng-repeat="c in quiz.questions[i].choices">
+      <a href="" data-ng-bind="c.choice" data-ng-click="update($index)"></a>
     </li>
   </ul>
-  <p data-ng-show="currentscore">Current score: <span data-ng-bind="score"></span></p>
-  <p data-ng-show="finish">End of quiz!</p>
-  <p data-ng-show="finish">Final score: <span data-ng-bind="score"></span></p>
-  <button data-ng-show="nextbutton" data-ng-init="false" data-ng-click="next()">Next</button>
-  <button data-ng-show="restartbutton" data-ng-init="false" data-ng-click="restart()">Restart</button>
+  <p data-ng-show="running">Current score: <span data-ng-bind="score"></span></p>
+  <p data-ng-show="!running">End of quiz!</p>
+  <p data-ng-show="!running">Final score: <span data-ng-bind="score"></span></p>
+  <button data-ng-show="choicemade" data-ng-init="false" data-ng-click="next()">Next</button>
+  <button data-ng-show="!running" data-ng-click="restart()">Restart</button>
 </div>
