--- a/pages/takequiz.html
+++ b/pages/takequiz.html
@@ -16,7 +16,6 @@
   <span data-ng-bind="msg"></span>
   <span data-ng-bind="score"></span>
   <div>
-    <button data-ng-show="choicemade" data-ng-click="next()">Next</button>
-    <button data-ng-show="!running" data-ng-click="restart()">Restart</button>
+    <button data-ng-show="choicemade" data-ng-bind="btnmsg" data-ng-click="next()"></button>
   </div>
 </div>
