added basic html form (again...)

--- a/pages/home.html
+++ b/pages/home.html
@@ -14,7 +14,7 @@
       <a href="#takequiz" class="btn btn-primary" id="tp_left_button">Take A Quiz!</a>
     </div>
     <div class="col-xs-6 text-left">
-      <a href="" class="btn btn-success" id="tp_right_button">Make A Quiz</a>
+      <a href="#makequiz" class="btn btn-success" id="tp_right_button">Make A Quiz</a>
     </div>
   </div>
 </div>
