--- a/pages/makequiz.html
+++ b/pages/makequiz.html
@@ -21,34 +21,17 @@
             <label class="control-label text-center"
                    for="question">Question:</label>
             <input type="text"
-                   data-ng-model="qu.question"
+                   data-ng-model="q.question"
                    class="form-control"
                    placeholder="Enter your question here"/>
           </div>
 
           <!--choices-->
-          <div class="form-group">
-            <label class="control-label text-center" for="choice">Choice 1:</label>
+          <div class="form-group" data-ng-repeat="c in q.choices track by $index">
+            <label class="control-label text-center"
+                   for="choice">Choice <span data-ng-bind="$index"></span>:</label>
             <input type="text"
-                   data-ng-model="qu.choices[0]"
-                   class="form-control" />
-          </div>
-          <div class="form-group">
-            <label class="control-label text-center" for="choice">Choice 2:</label>
-            <input type="text"
-                   data-ng-model="qu.choices[1]"
-                   class="form-control" />
-          </div>
-          <div class="form-group">
-            <label class="control-label text-center" for="choice">Choice 3:</label>
-            <input type="text"
-                   data-ng-model="qu.choices[2]"
-                   class="form-control" />
-          </div>
-          <div class="form-group">
-            <label class="control-label text-center" for="choice">Choice 4:</label>
-            <input type="text"
-                   data-ng-model="qu.choices[3]"
+                   data-ng-model="q.choices[$index]"
                    class="form-control" />
           </div>
 
@@ -83,7 +66,7 @@
 
       </div>
 
-      <pre>quiz = {{quiz | json}}</pre>
+      <pre>{{question | json}}</pre>
     </form>
   </div>
 </div>
