JSON object made by form should now be the same structure as testquiz.json, fixed bug where identical objects were getting appended

--- a/pages/makequiz.html
+++ b/pages/makequiz.html
@@ -42,7 +42,7 @@
             <label class="control-label text-center"
                    for="choice">Answer <span data-ng-bind="$index + 1"></span>:</label>
             <input type="text"
-                   data-ng-model="q.choices[$index]"
+                   data-ng-model="q.choices[$index].choice"
                    class="form-control"
                    placeholder="Enter your answer here" />
           </div>
